# Dou2048

./: 2048_ai_controller.h  2048_ai_cpu.cpp  2048_ai_cuda.h  2048_ai_optimized.cpp  2048_cuda_kernels.cu  CMakeLists.txt  Main.cu  README.md  build.sh  build_and_run.sh  index.html  optimized_2048_ai.cpp
.github/workflows/: main.yml
